# Sherlog

./: .gitignore  Cargo.toml  README.md  build.rs  todo.md  version.rc
NSIS/: EULA.txt  release_howto.txt  release_notes.txt  sherlog.win64.nsi
src/: log_store.rs  main.rs  model.rs  model_internal.rs  style.css  tree_model.rs
src/parse/: datetime_utils.rs  glog.rs  io.rs  mod.rs  rds_log.rs  scanlib_log.rs  sfile.rs  xlog.rs
