[package]
name = "sherlog"
version = "1.0.0"
authors = ["Benjamin Richner"]
edition = "2021"
license = "GPL-3.0-only"
description = "Log viewer and analysis tool"
keywords = ["visualization", "log", "analyzer", "debug-tool"]
categories = ["visualization", "parser-implementations"]
repository = "https://github.com/BenjaminRi/Sherlog/"

[package.metadata.winresource]
ProductName = "Sherlog"
OriginalFilename = "sherlog.exe"
LegalCopyright = "© Benjamin Richner, 2019-2023"

[dependencies]
gtk = { version = "0.4.7", package = "gtk4" }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
regex = "1.5.4"
zip = { version = "0.5.9", features = ["deflate"], default-features = false }

[build-dependencies]
winresource = "0.1"
