[package]
name = "sherlog"
version = "0.9.1"
authors = ["Benjamin Richner"]
edition = "2018"
license = "GPL-3.0-only"
description = "Log viewer and analysis tool"
keywords = ["visualization", "log", "analyzer", "debug-tool"]
categories = ["visualization", "parser-implementations"]
repository = "https://github.com/BenjaminRi/Sherlog/"

[package.metadata.winresource]
ProductName = "Sherlog"
OriginalFilename = "sherlog.exe"
LegalCopyright = "Copyright © 2020 Benjamin Richner"

[dependencies]
gtk = "0.15.4"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
regex = "1.5.4"
zip = { version = "0.5.9", features = ["deflate"], default-features = false }

[build-dependencies]
winresource = "0.1"
