[package]
name = "sherlog"
version = "0.9.2"
authors = ["Benjamin Richner"]
edition = "2021"
license = "GPL-3.0-only"
description = "Log viewer and analysis tool"
keywords = ["visualization", "log", "analyzer", "debug-tool"]
categories = ["visualization", "parser-implementations"]
repository = "https://github.com/BenjaminRi/Sherlog/"

[package.metadata.winresource]
ProductName = "Sherlog"
OriginalFilename = "sherlog.exe"
LegalCopyright = "© Benjamin Richner, 2019-2023"

[dependencies]
gtk = "0.17.1"
log = "0.4.19"
fern = "0.6.2"
chrono = "0.4.26"
regex = "1.8.4"
zip = { version = "0.5.9", features = ["deflate"], default-features = false }

[build-dependencies]
winresource = "0.1"
